# sam-bam-rs

./: .gitignore  Cargo.toml  README.md
src/: bam_reader.rs  bam_writer.rs  bgzip.rs  bgzip_reader.rs  bgzip_writer.rs  cigar.rs  header.rs  index.rs  lib.rs  main.rs  pileup.rs  record.rs  sam.rs
src/bgzip/: mod.rs  read.rs  write.rs  write1.rs
src/record/: cigar.rs  mod.rs  sequence.rs  tags.rs
tests/: integration_test.rs
