[package]
name = "bam"
version = "0.0.4"
authors = ["Timofey Prodanov <timofey.prodanov@gmail.com>"]
edition = "2018"
description = "Library that allows to read BAM files, written completely in Rust."
repository = "https://gitlab.com/tprodanov/bam"
readme = "README.md"
license = "MIT"
keywords = ["bam", "htslib", "backend", "bio", "bgzip"]
documentation = "https://docs.rs/bam"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[features]
default = []
check_crc = ["crc"]

[dependencies]
byteorder = "1.3"
inflate = "0.4"
lru-cache = "0.1"
crc = { version = "1.8", optional = true }

[dev-dependencies]
rand = "0.7.0"
