[package]
name = "bam"
version = "0.0.6"
authors = ["Timofey Prodanov <timofey.prodanov@gmail.com>"]
edition = "2018"
description = "Library that allows to read BAM files, written completely in Rust."
repository = "https://gitlab.com/tprodanov/bam"
readme = "README.md"
license = "MIT"
keywords = ["bam", "sam", "htslib", "bio", "bgzip"]
documentation = "https://docs.rs/bam"
exclude = [".cargo_vcs_info.json", ".gitignore"]

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[features]
default = ["flate2/zlib"]
rust_flate = ["flate2/rust_backend"]

[dependencies]
byteorder = "1.3"
lru-cache = "0.1"
crc32fast = "1.2"
flate2 = { version = "1.0", default-features = false }

[dev-dependencies]
rand = "0.7.0"
